--- a/app/src/main/res/layout/activity_arduino_mode.xml
+++ b/app/src/main/res/layout/activity_arduino_mode.xml
@@ -15,7 +15,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/arduino_mode_button"
+            android:text="@string/ARDUINO_MODE"
             android:id="@+id/txtTitle" android:layout_gravity="center_horizontal"
             android:textSize="26sp"/>
+    <Button
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:text="@string/CONNECT"
+            android:id="@+id/btnConnect" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp"
+            android:clickable="true" android:textSize="18sp" android:onClick="connect"/>
 </LinearLayout>
